--- a/Proyecto-LP-master/app/src/main/res/layout/activity_mapa_general.xml
+++ b/Proyecto-LP-master/app/src/main/res/layout/activity_mapa_general.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingTop="2dp"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 <fragment
